ingress/ingress1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-d
spec:
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
  labels:
    app: apache
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30002
      protocol: TCP
  selector:
    app: apache

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apache
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx #Necesario para que funcione
  rules:
    #Dominio con el que accederemos.
    - host: midominio.com
      http:
        paths:
          #El path base con el que accedermos al servicio
          - path: /apache
            pathType: Prefix
            backend:
              #Datos del servicio a asociar
              service:
                name: apache-svc
                port:
                  number: 80 #Puerto del container
